[gd_scene load_steps=6 format=3 uid="uid://cavcjvllyn1b0"]

[ext_resource type="Script" uid="uid://cqbdnlfjngn4i" path="res://scenes/menu/menu.gd" id="1_y1o0p"]
[ext_resource type="Theme" uid="uid://bm6h5yx1xgaub" path="res://ui/default_theme.tres" id="2_r8yej"]
[ext_resource type="PackedScene" uid="uid://d3m4sflh0fxm1" path="res://scenes/menu/input_menu.tscn" id="3_3y2rt"]
[ext_resource type="PackedScene" uid="uid://cmwenlnrbr0ev" path="res://scenes/menu/settings_menu.tscn" id="4_t0a87"]
[ext_resource type="PackedScene" uid="uid://cxbd17bwwqeko" path="res://scenes/menu/credits.tscn" id="5_qo0fc"]

[node name="Menu" type="CanvasLayer" node_paths=PackedStringArray("start_menu", "input_menu", "settings_menu", "credits", "title_label", "version_label", "first_start_menu_item", "quit_button", "items_to_hide")]
script = ExtResource("1_y1o0p")
start_scene_file_path = "res://scenes/game_map/game_map.tscn"
start_menu = NodePath("StartMenuMC")
input_menu = NodePath("InputMenu")
settings_menu = NodePath("SettingsMenu")
credits = NodePath("Credits")
title_label = NodePath("HeaderMC/TitleLabel")
version_label = NodePath("VersionMC/VersionLabel")
first_start_menu_item = NodePath("StartMenuMC/VBoxContainer/StartGameButton")
quit_button = NodePath("StartMenuMC/VBoxContainer/QuitButton")
items_to_hide = [NodePath("StartMenuMC/VBoxContainer/StartGameButton"), NodePath("StartMenuMC/VBoxContainer/CreditsButton"), NodePath("HeaderMC"), NodePath("VersionMC"), NodePath("StartMenuMC/VBoxContainer/ContinueButton"), NodePath("StartMenuMC/VBoxContainer/BackToMainMenuButton")]

[node name="HeaderMC" type="MarginContainer" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TitleLabel" type="RichTextLabel" parent="HeaderMC"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_r8yej")
theme_type_variation = &"TitleRTL"
text = "Game Off 2025"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartMenuMC" type="MarginContainer" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenuMC"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.start"

[node name="ContinueButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.continue"

[node name="CalibrationButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.calibration"

[node name="InputMenuButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.input_menu"

[node name="SettingsMenuButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.settings_menu"

[node name="CreditsButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.credits"

[node name="BackToMainMenuButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.back_to_main_menu"

[node name="QuitButton" type="Button" parent="StartMenuMC/VBoxContainer"]
layout_mode = 2
text = "ui.menu.quit"

[node name="InputMenu" parent="." instance=ExtResource("3_3y2rt")]
visible = false
z_index = 1

[node name="SettingsMenu" parent="." instance=ExtResource("4_t0a87")]
visible = false
z_index = 1

[node name="Credits" parent="." instance=ExtResource("5_qo0fc")]
visible = false
z_index = 1

[node name="VersionMC" type="MarginContainer" parent="."]
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VersionLabel" type="Label" parent="VersionMC"]
layout_mode = 2
text = "v[version]"

[connection signal="pressed" from="StartMenuMC/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/CalibrationButton" to="." method="_on_calibration_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/InputMenuButton" to="." method="_on_input_menu_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/SettingsMenuButton" to="." method="_on_settings_menu_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
[connection signal="pressed" from="StartMenuMC/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="back_button_pressed" from="InputMenu" to="." method="_on_input_menu_back_button_pressed"]
[connection signal="back_button_pressed" from="SettingsMenu" to="." method="_on_settings_menu_back_button_pressed"]
[connection signal="back_button_pressed" from="Credits" to="." method="_on_credits_back_button_pressed"]
